crates/keron-lang/tests/corpus/errors/parse/fn_named_arg_lhs_not_ident.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: named-argument LHS must be an identifier
  --> 2:16
  |
2 | val x: Int = f(1 + 2 = 3)
  |                ^
